Add audio to the chapters

--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -3,8 +3,9 @@
         <!-- Logo or Site Title -->
         <nav class="flex items-center justify-center gap-6">
             <a href="/" class="text-2xl font-bold">القرآن الكريم</a>
-            <div class="ml-12">
+            <div class="ml-12 flex gap-6">
                 <a href="/juzes" class="text-lg font-bold text-[#16a34a]">الاجزاء</a>
+                <a href="/chapters/info" class="text-lg font-bold text-[#16a34a]">سبب التسمية</a>
             </div>
         </nav>
 
